# DjangoStorefront

./: .gitignore  Dockerfile  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  readme.md  requirements-all.txt  requirements-dev.txt  requirements-prod.txt  wait-for-it.sh
core/: admin.py  serializers.py
core/migrations/: 0001_initial.py
core/templates/core/: index.html
likes/: models.py
likes/migrations/: 0001_initial.py
locustfiles/: browse_products.py
playground/: urls.py  views.py
playground/templates/: hello.html
playground/templates/emails/: hello.html
store/: admin.py  filters.py  models.py  permissions.py  serializer.py  signals.py  urls.py  validators.py  views.py
store/management/commands/: seed.sql  seed_db.py
store/migrations/: 0001_initial.py  0002_rename_price_product_unit_price.py  0003_product_slug.py  0004_address_zip_code.py  0005_alter_collection_options_alter_customer_options_and_more.py  0006_alter_product_description.py  0007_alter_orderitem_product_alter_product_collection_and_more.py  0008_convert_cart_to_uuid.py  0009_alter_cartitem_cart_alter_cartitem_unique_together.py  0010_alter_cartitem_quantity.py  0011_alter_customer_options_remove_customer_email_and_more.py  0012_alter_order_options.py  0013_alter_customer_options.py  0014_alter_orderitem_order.py  0015_productimage.py
store/signals/: handlers.py
store/tests/: conftest.py  test_carts.py  test_collections.py  test_customers.py  test_products.py
store_custom/: admin.py
storefront/: celery.py  settings.py  urls.py
storefront/settings/: common.py  dev.py  prod.py
tags/: admin.py  models.py
tags/migrations/: 0001_initial.py
