[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storefront"
version = "0.1.0"
description = "Django e-commerce storefront with modern stack"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 6.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Production dependencies
dependencies = [
    # Core Django
    "Django>=6.0,<7.0",
    "asgiref>=3.11,<4.0",
    "sqlparse>=0.5,<0.6",

    # Database
    "psycopg2>=2.9",

    # REST Framework
    "djangorestframework>=3.16,<4.0",
    "djangorestframework-simplejwt>=5.5,<6.0",
    "djoser>=2.3,<3.0",
    "drf-nested-routers>=0.95,<0.96",

    # Authentication & Security
    "PyJWT>=2.10,<3.0",
    "social-auth-app-django>=5.7,<6.0",
    "social-auth-core>=4.8,<5.0",
    "oauthlib>=3.3,<4.0",
    "requests-oauthlib>=2.0,<3.0",
    "python3-openid>=3.2,<4.0",
    "defusedxml>=0.7,<0.8",
    "cryptography>=46.0,<47.0",
    "certifi>=2025.11",

    # Media & Images
    "Pillow>=12.0,<13.0",

    # CORS
    "django-cors-headers>=4.9,<5.0",

    # Filtering
    "django-filter>=25.2,<26.0",

    # Email
    "django-templated-mail>=1.1,<2.0",

    # Async & Workers
    "celery>=5.6,<6.0",
    "redis>=7.1,<8.0",
    "django-redis>=6.0,<7.0",

    # Static files
    "whitenoise>=6.11,<7.0",

    # Utilities
    "python-dateutil>=2.9,<3.0",
    "pytz>=2025.2",
    "tzdata>=2025.3",
    "tzlocal>=5.3,<6.0",
    "six>=1.17,<2.0",
    "packaging>=25.0,<26.0",
    "platformdirs>=4.5,<5.0",
    "blinker>=1.9,<2.0",

    # HTTP & Networking
    "requests>=2.32,<3.0",
    "urllib3>=2.6,<3.0",
    "idna>=3.11,<4.0",
    "charset-normalizer>=3.4,<4.0",
    "brotli>=1.2,<2.0",

    "gunicorn>=23.0.0"
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=9.0,<10.0",
    "pytest-django>=4.11,<5.0",
    "pytest-watch>=4.2,<5.0",
    "model-bakery>=1.20,<2.0",

    # Profiling & Debugging
    "django-debug-toolbar>=6.1,<7.0",
    "django-silk>=5.4,<6.0",
    "gprof2dot>=2025.4,<2026.0",

    # Type checking
    "django-stubs>=5.2,<6.0",
    "django-stubs-ext>=5.2,<6.0",
    "djangorestframework-stubs>=3.16,<4.0",
    "celery-types>=0.24,<0.25",
    "typing-extensions>=4.15,<5.0",

    # Load testing
    "locust>=2.42,<3.0",

    # Monitoring
    "flower>=2.0,<3.0",
    "prometheus-client>=0.23,<0.24",

    # Development tools
    "ipython>=8.27",
    "django-extensions>=3.2",
    "watchdog>=6.0,<7.0",

    # Code quality
    "black>=24.10",
#    "flake8>=7.0",
#    "isort>=5.12",
#    "mypy>=1.10",
#    "pre-commit>=4.1",
]

#docs = [
#    "sphinx>=7.2",
#    "sphinx-rtd-theme>=2.0",
#    "myst-parser>=2.0",
#]

[project.urls]
Homepage = "https://github.com/yourusername/storefront"
Repository = "https://github.com/yourusername/storefront.git"
Issues = "https://github.com/yourusername/storefront/issues"

[project.scripts]
manage = "manage:main"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "django.*",
    "djangorestframework.*",
    "celery.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["store/tests", "playground/tests", "core/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
DJANGO_SETTINGS_MODULE = "storefront.settings"

[tool.coverage.run]
source = ["store", "playground", "core"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]